update:update make file

--- a/static/docker-compose.yml
+++ b/static/docker-compose.yml
@@ -7,6 +7,4 @@ services:
     ports:
       - '9000:80'
     volumes:
-      - nginx:/etc/nginx/conf.d
-volumes:
-  nginx:
+      - './app:/usr/share/nginx/html'
