--- a/static/docker-compose.yml
+++ b/static/docker-compose.yml
@@ -6,5 +6,8 @@ services:
     image: hexo-blog
     ports:
       - '9000:80'
+      - '443:443'
     volumes:
-      - './app:/usr/share/nginx/html'
+      - nginx:/etc/nginx/conf.d
+volumes:
+  nginx:
