Revert "change theme"
This reverts commit 17411bdff4aeed4e7792dd4d16091c102be9006d.

--- a/static/_config.yml
+++ b/static/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: OASIS系统
-subtitle: 'A Useful Tool For Analysis'
+title: Hexo
+subtitle: ''
 description: ''
 keywords:
-author: Caribou
+author: John Doe
 language: en
 timezone: ''
 
@@ -93,7 +93,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: casper
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
