--- a/static/_config.yml
+++ b/static/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: OASIS系统
+subtitle: 'A Usefull Tool For Analysis'
 description: ''
 keywords:
-author: John Doe
+author: Caribou
 language: en
 timezone: ''
 
