--- a/static/makefile
+++ b/static/makefile
@@ -11,5 +11,5 @@ build:
 
 docker:
 	docker-compose down
-	docker rmi $(docker images | grep "none" | awk '{print $3}')
+	# docker rmi $(docker images | grep "none" | awk '{print $3}')
 	docker-compose up -d --build
