--- a/static/docker-compose.yml
+++ b/static/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     container_name: hexo-blog
     build: .
     image: hexo-blog
-    ports:
-      - '9000:80'
     volumes:
       - nginx:/etc/nginx/conf.d
+    environment:
+      - VIRTUAL_HOST=doc.oasi.top
+      - VIRTUAL_PORT=80
+      - LETSENCRYPT_HOST=doc.oasi.top
+      - LETSENCRYPT_EMAIL=1071956678@qq.com
 volumes:
   nginx:
