--- a/static/docker-compose.yml
+++ b/static/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     volumes:
       - nginx:/etc/nginx/conf.d
     environment:
-      - VIRTUAL_HOST=doc.oasi.top
+      - VIRTUAL_HOST=106.14.140.93
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=doc.oasi.top
+      - LETSENCRYPT_HOST=106.14.140.93
       - LETSENCRYPT_EMAIL=1071956678@qq.com
     networks: 
       - proxy
